2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_copy):
	  - Fix incorrect memory handling on attributes with multiple <set>s

2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default),
	(gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstyle.c: (gst_ttml_style_get_font_size_unit_name),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - PARTIAL support for fontSize. Some of the font metrics require
	    knowing the current font size, which cannot be done through
	    Pango markup. Pixel measures are honored, other measures
	    are approximated.

2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlspan.c: (gst_ttml_span_new):
	  - Remove VS warning by adding explicit cast.

2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlspan.c: (gst_ttml_span_new):
	  - Remove ugly single space at beginning of spans caused by
	    XML indentation. THIS DOES NOT FOLLOW THE SPEC, and might
	    break some (strange) scenarios, but IMHO looks nicer and
	    hides a bug we have when this single space appears before
	    a <set> node.

2013-01-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_add_characters):
	  - Fix spans with no "begin" attribute.

2013-01-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/fluttml.c: (plugin_init):
	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_parse), (gst_ttml_attribute_free),
	(gst_ttml_attribute_type_name), (gst_ttml_attribute_add_event):
	* src/gstttmlevent.c: (gst_ttml_event_new_span_begin),
	(gst_ttml_event_new_span_end), (gst_ttml_event_new_attr_update),
	(gst_ttml_event_list_flush):
	* src/gstttmlevent.h:
	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_parse_event), (gst_ttmlparse_add_characters),
	(gst_ttmlparse_sax_element_start),